specs/fragments/arrays/let-array-multiple-access.test
// Test: let-array-multiple-access
function main() returns int
    let arr = [5, 10, 15, 20]
    var a = try arr.get(0) otherwise 0
    var b = try arr.get(3) otherwise 0
    return a + b
end 'main'
---
ExitCode: 25
---
func.func @main() -> i64 {
  ^entry:
    x86.prologue stack_size=200 saved_gprs=[RBX,R12,R13,R14,R15]
    x86.mov rbx, 5
    x86.mov r12, 4
    x86.mov r13, 8
    x86.mov r14, 32
    x86.mov r11, r14
    x86.call extern kernel32.dll::GetProcessHeap
    x86.mov rcx, rax
    x86.mov rdx, 8
    x86.mov r8, r11
    x86.call extern kernel32.dll::HeapAlloc
    x86.lea rcx, qword ptr [rbp-64]
    x86.mov r15, 0
    x86.lea rdx, qword ptr [rcx]
    x86.mov qword ptr [rdx], rax
    x86.lea rax, qword ptr [rcx+8]
    x86.mov qword ptr [rax], r15
    x86.lea r8, qword ptr [rcx+16]
    x86.mov qword ptr [r8], r12
    x86.mov r8, 0
    x86.lea r9, qword ptr [rcx+24]
    x86.mov dword ptr [r9], r8
    x86.lea r9, qword ptr [rcx+28]
    x86.mov dword ptr [r9], r8
    x86.mov r9, qword ptr [rdx]
    x86.lea r8, qword ptr [r9+r15]
    x86.mov qword ptr [r8], rbx
    x86.mov r8, 10
    x86.mov r9, qword ptr [rdx]
    x86.lea r10, qword ptr [r9+r13]
    x86.mov qword ptr [r10], r8
    x86.mov r10, 15
    x86.mov r8, qword ptr [rdx]
    x86.mov r9, 16
    x86.lea r11, qword ptr [r8+r9]
    x86.mov qword ptr [r11], r10
    x86.mov r10, 20
    x86.mov r11, qword ptr [rdx]
    x86.mov rdx, 24
    x86.lea r8, qword ptr [r11+rdx]
    x86.mov qword ptr [r8], r10
    x86.mov qword ptr [rax], r12
    x86.lea rax, qword ptr [rbp-104]
    x86.lea r10, qword ptr [rax]
    x86.mov qword ptr [r10], r15
    x86.lea r10, qword ptr [rax+8]
    x86.push rsi
    x86.push rdi
    x86.mov rdi, r10
    x86.mov rsi, rcx
    x86.mov rcx, r14
    x86.cld
    x86.rep_movsb
    x86.pop rdi
    x86.pop rsi
    x86.lea r14, qword ptr [rbp-144]
    x86.mov rcx, 40
    x86.push rsi
    x86.push rdi
    x86.mov rdi, r14
    x86.mov rsi, rax
    x86.cld
    x86.rep_movsb
    x86.pop rdi
    x86.pop rsi
    x86.lea r12, qword ptr [rbp-160]
    x86.mov r10, r12
    x86.mov r11, r14
    x86.push r15
    x86.pop r8
    x86.mov rdx, r11
    x86.mov rcx, r10
    x86.call Array$int.get
    x86.lea rcx, qword ptr [r12]
    x86.movzx rax, byte ptr [rcx]
    x86.mov rcx, rax
    x86.cmp rcx, r15
    x86.setne rcx
    x86.test rcx, rcx
    x86.jne try.error
    x86.jmp try.success
  ^try.success:
    x86.lea rcx, qword ptr [r12+8]
    x86.mov rax, qword ptr [rcx]
    x86.mov r12, rax
    x86.jmp try.merge
  ^try.error:
    x86.mov r12, 0
    x86.jmp try.merge
  ^try.merge(%125: i64, %126: i64):
    x86.mov rax, 3
    x86.lea r15, qword ptr [rbp-176]
    x86.mov r10, r15
    x86.mov r11, r14
    x86.push rax
    x86.pop r8
    x86.mov rdx, r11
    x86.mov rcx, r10
    x86.call Array$int.get
    x86.lea rax, qword ptr [r15]
    x86.movzx rcx, byte ptr [rax]
    x86.mov rax, rcx
    x86.mov rcx, 0
    x86.cmp rax, rcx
    x86.setne rax
    x86.lea rcx, qword ptr [rbp-184]
    x86.test rax, rax
    x86.jne try.error_1
    x86.jmp try.success_1
  ^try.success_1:
    x86.lea rax, qword ptr [r15+8]
    x86.mov r10, qword ptr [rax]
    x86.mov qword ptr [rcx], r10
    x86.mov r10, r12
    x86.jmp try.merge_1
  ^try.error_1:
    x86.mov rax, 0
    x86.mov qword ptr [rcx], rax
    x86.mov r10, r12
    x86.jmp try.merge_1
  ^try.merge_1(%127: i64):
    x86.mov rax, qword ptr [rcx]
    x86.mov r12, r10
    x86.add r12, rax
    x86.lea rax, qword ptr [r14+8]
    x86.lea r10, qword ptr [rax]
    x86.mov rax, qword ptr [r10]
    x86.mov r11, rax
    x86.call extern kernel32.dll::GetProcessHeap
    x86.mov rcx, rax
    x86.mov rdx, 0
    x86.mov r8, r11
    x86.call extern kernel32.dll::HeapFree
    x86.mov rax, r12
    x86.epilogue saved_gprs=[RBX,R12,R13,R14,R15]
    x86.ret
}

func.func @Array$int.get(%__error_union_ret: ptr<!maxon.error_union<i64, ArrayError>>, %self: memref<!maxon.struct<Array$int>>, %index: i64) {
  ^entry(%__error_union_ret: ptr<!maxon.error_union<i64, ArrayError>>, %self: memref<!maxon.struct<Array$int>>, %index: i64):
    x86.prologue stack_size=32
    x86.mov r10, rcx
    x86.mov r11, rdx
    x86.mov rax, r8
    x86.mov rcx, r10
    x86.mov rdx, r11
    x86.lea r8, qword ptr [rdx+8]
    x86.lea r9, qword ptr [r8+8]
    x86.mov r8, qword ptr [r9]
    x86.mov r9, 0
    x86.cmp rax, r9
    x86.setl r9
    x86.test r9, r9
    x86.jne then
    x86.jmp merge
  ^then:
    x86.mov r9, 0
    x86.mov r10, 1
    x86.mov byte ptr [rcx], r10
    x86.mov r10, 8
    x86.lea r11, qword ptr [rcx+r10]
    x86.mov byte ptr [r11], r9
    x86.epilogue
    x86.ret
  ^merge:
    x86.cmp rax, r8
    x86.setge r8
    x86.test r8, r8
    x86.jne then_1
    x86.jmp merge_1
  ^then_1:
    x86.mov r8, 0
    x86.mov r11, 1
    x86.mov byte ptr [rcx], r11
    x86.mov r11, 8
    x86.lea r9, qword ptr [rcx+r11]
    x86.mov byte ptr [r9], r8
    x86.epilogue
    x86.ret
  ^merge_1:
    x86.mov r9, 0
    x86.mov byte ptr [rcx], r9
    x86.lea r9, qword ptr [rdx+8]
    x86.lea rdx, qword ptr [r9]
    x86.mov r9, qword ptr [rdx]
    x86.mov rdx, 3
    x86.mov r8, rax
    x86.push rcx
    x86.shl r8, rdx
    x86.pop rcx
    x86.lea rdx, qword ptr [r9+r8]
    x86.mov r9, qword ptr [rdx]
    x86.mov rdx, 8
    x86.lea r8, qword ptr [rcx+rdx]
    x86.mov qword ptr [r8], r9
    x86.epilogue
    x86.ret
}
---
